# TalksterOverlay

./: CMakeLists.txt  ChatWindow.cpp  ChatWindow.h  HotkeyManager.h  HotkeySetup.cpp  HotkeySetup.h  LICENSE  MessageRenderer.cpp  MessageRenderer.h  MessageSending.cpp  MessageSending.h  MessageWindow.cpp  MessageWindow.h  README.md  Renderer.cpp  Renderer.h  RoomPrompt.cpp  RoomPrompt.h  TextBuffer.cpp  TextBuffer.h  Utils.h  WebSocketClient.cpp  main.cpp
client/: MatrixClient.cpp  MatrixClient.h  MatrixSetup.cpp  MatrixSetup.h  WebSocketClient.cpp  WebSocketClient.h
renderer/: MessageRenderer.h  Renderer.h
window/: ChatWindow.cpp  ChatWindow.h  MessageWindow.h
